- travis and appveyor

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,8 @@ knitr::opts_chunk$set(
 # generalizing: Generalizing Experimental Results By Leveraging Knowledge of Mechanisms
 
 <!-- badges: start -->
+[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/carloscinelli/generalizing?branch=master&svg=true)](https://ci.appveyor.com/project/carloscinelli/generalizing)
+[![Travis build status](https://travis-ci.org/carloscinelli/generalizing.svg?branch=master)](https://travis-ci.org/carloscinelli/generalizing)
 <!-- badges: end -->
 
 `generalizing` implements methods for generalizing experimental results leveraging the invariance of probabilities of causation, as discussed in [Cinelli, C. and Pearl, J. (2020+) "Generalizing Experimental Results By Leveraging Knowledge of Mechanisms." European Journal of Epidemiology (accepted).](https://ftp.cs.ucla.edu/pub/stat_ser/r492.pdf) 
